--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,13 @@ eureka:
        defaultZone: http://localhost:9091/eureka
     register-with-eureka: true
     fetch-registry: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+          
     
 server:
   port: 0 
