--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,3 @@
-#spring:
-#  application:
-#    name: name-service
-#    
-#    
-#eureka:
-#  client:
-#    service-url:
-#       defaultZone: http://localhost:9091/eureka
-#    register-with-eureka: true
-#    fetch-registry: true
-#
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
-#          
-#    
-#server:
-#  port: 0 
+spring:
+  application:
+    name: name-service
