--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 							<sourceDocumentName>index.adoc</sourceDocumentName>
 							<backend>html</backend>
 							<attributes>
-								<snippets>${project.build.directory}/generated-snippets</snippets>
+								<snippets>${project.build.directory}/snippets</snippets>
 							</attributes>
 						</configuration>
 					</execution>
